# leakify

./: .gitnore  readme.md  setup.cfg  workflow.yaml
leakify/: cli.py
