[metadata]
name = leakify
version = 0.1.0
description = Download photos and videos from leakedzone.com
long_description = file: README.md
long_description_content_type = text/markdown
author = Your Name
license = MIT
url = https://github.com/yourusername/leakify

[options]
packages = find:
python_requires = >=3.7
install_requires =
    aiohttp
    beautifulsoup4
    tabulate
    colorama

[options.entry_points]
console_scripts =
    leakify = leakify.cli:main
